src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');

:root {
  --color-primary: rgba(128, 0, 0, 0.8);
  --color-secondary: #a84646;
  --secondary-hover: rgb(153, 63, 63);
  --color-accent: rgb(26, 170, 170, 0.9);
  --accent-hover: rgb(26, 170, 170);
  --primary-hover: rgba(128, 0, 0, 0.9);
  --text-muted: rgb(94, 92, 92);
  --light-gray: rgb(225, 225, 225, 0.35);
  --outline-gray: #c4c4c4;
  --nav-height: 48px;
  --background-yellow: rgb(250, 234, 211);
}

* {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  background: whitesmoke;
  font-family: 'Inter', Arial, Helvetica, sans-serif;
  color: rgb(34, 39, 63);
}

main {
  min-height: 100vh;
}

/* Post/Comment/Profile */

.post,
.comment {
  margin-top: 20px;
}

.post__body,
.comment__body {
  max-height: 500px;
  overflow-y: scroll;
}

.post__body p,
.comment__body p {
  white-space: pre-wrap;
  margin: 0;
  line-height: 1.6;
}

.post .media {
  margin-top: 10px;
}

.content-details {
  display: flex;
  align-items: center;
}

.post__header,
.comment__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.post__details,
.comment__details {
  display: flex;
  align-items: center;
  justify-content: right;
  margin-top: 10px;
}

.username {
  font-weight: 500;
}

.date {
  font-size: 90%;
  color: var(--text-muted);
}

.media {
  max-width: 80%;
  max-height: 80%;
}

.posts-container,
.profile-card,
.profile-edit-page .file-chooser,
.profile-edit__header,
.edit-row {
  min-width: 300px;
  max-width: 500px;
  width: 100%;
  padding: 0 1px;
}

.load-more-container {
  display: flex;
  justify-content: center;
  margin-top: 25px;
}

/* Inputs */

.text-box {
  padding: 1.5rem 2rem;
  border: 1px solid var(--outline-gray);
  border-radius: 7px;
  outline: none;
  width: 100%;
}

.text-box:focus {
  box-shadow: 0 0 3px 1px var(--color-secondary);
}

input[type='date'] {
  outline: 0;
  border: 1px solid var(--outline-gray);
  border-radius: 5px;
  padding: 0.5rem 1rem;
}

input[type='date']:focus {
  box-shadow: 0 0 1px 1px var(--color-secondary);
}

.input-group {
  display: flex;
  align-items: center;
  padding-right: 10px;
  box-shadow: 0 0 1px 1px var(--outline-gray);
  border-radius: 7px;
  background: white;
}

.input-group:focus-within {
  box-shadow: 0 0 3px 1px var(--color-secondary);
}

.input-group .text-box {
  outline: none;
  border: none;
}

.input-group .text-box:focus {
  box-shadow: none;
}

.input-group .icon {
  margin-left: 5px;
}

/* Comments */

.create-comment {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.create-comment .btn {
  margin-top: 5px;
}

.create-comment .text-box {
  resize: vertical;
  min-height: 50px;
  height: 50px;
  max-height: 200px;
}

/* Alerts */

.alert {
  padding: 1rem 0;
  border-radius: 5px;
  margin-bottom: 1rem;
  text-overflow: clip;
  width: 100%;
}

.alert--primary {
  color: var(--color-primary);
}

.alert--secondary {
  color: var(--color-secondary);
}

.alert--accent {
  color: var(--color-accent);
}

/* General/Misc */

.clickable {
  cursor: pointer;
}

.page {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 3rem;
}

.page-form {
  background: var(--background-yellow);
  min-height: 100vh;
}

.icon {
  margin-left: 20px;
}
.icon--small {
  font-size: 1.6rem;
}

.icon--medium {
  font-size: 2.2rem;
}

.icon--large {
  font-size: 2.5rem;
}

/* Login/Register */

.login-page img,
.register-page img {
  display: none;
}

@media screen and (min-width: 960px) {
  .login-page,
  .register-page {
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
  }
  .login-page img,
  .register-page img {
    display: inline-block;
    max-width: 600px;
    width: 100%;
  }
}

